DOI API (#944)
Creates a DOI endpoint for out API that returns a list of resources for a given DOI.

Additional improvements:

* AllDois module for indicating which fields have DOIs
* better parsing that allows for DOIs with multiple segments, i.e. doi:10.1234/asdf/qwer/2345
* DoiSchema and DoiSearch classes for indexing and searching for DOIs in Solr
